--- a/index.html
+++ b/index.html
@@ -30,44 +30,55 @@
     <div class="content-container" id="exploration-container">
         <div class="map" id="transit-map"></div>
         <div class="map-section" id="brief-intro">
-            <h2>Welcome!</h2>
-            <p>My name is Marcus Roldan, and I am a 21-year-old, fifth-year Computer Science student at Northeastern University with a concentration in Artificial Intelligence.</p>
+            <h2>Welcome to my portfolio!</h2>
+            <img>
+            <p>My name is Marcus Roldan. I am a 21-year-old, student at Northeastern University and in December 2024, I will be graduating with a BS in Computer Science along with a concentration in Artificial Intelligence.</p>
             <p>Click on the stations throughout the transit map on the left to learn more about me, my projects, and my skillset!</p>
+            <h2>Interests:</h2>
+            <ul>
+                <li><b>Soccer (Football)</b>: lifelong Bayern Munich fan, and my favorite player of all time is Thomas Muller!</li>
+                <li><b>Music</b>: I enjoy many genres of music ranging from Deep House, to old-school Hip-Hop, to Math Rock!</li>
+                <li><strong>Biking</strong>: My favorite way to get around any city is by bike, (trams are a close second though).</li>
+                <li><strong>Public Transit</strong>: As you will see, I love public transit and enjoy exploring cities using it. I have even began a collection of transit cards from different cities across the globe!</li>
+            </ul>
         </div>
 
         <div class="map-section" id="northeastern-intro">
             <h2>Northeastern:</h2>
-            <p>Throughout my time at Northeastern I have had the pleasure of learning and experiencing so many aspects of technology, Computer Science, Software Development, Data Science, and many more interesting topics.</p>
+            <p>At Northeastern I have had the pleasure of learning and experiencing many aspects of Technology, Computer Science, Software Development, Data Science, and many other interesting topics.</p>
+            <p>One constant throughout my studies has been the massive impact technology already has on our lives, and the trend of its increasing role in our day-to-day happenings. With this in mind, it is imperitive that as we forge the path forward, we recognize the stakes and potential collateral damage new technologies can have. A strong ethical foundation is key to responsible technological development, ensuring that as we progress our technological capabilities, they serve to better both those directly and indirectly impacted by it.</p>
         </div>
 
         <div class="map-section" id="wishroute">
             <h2>Wishroute:</h2>
-            <p>While on my first co-op as a Software Engineer at Wishroute, Inc., on top of gaining highly-valuable technical experience and knowledge, I realized the personal importance of having a tangible, positive impact through my work.</p>
+            <p>During my co-op as a Software Engineer at Wishroute, Inc., I gained highly-valuable technical experience and knowledge, as well as a better understanding of the importance of having a tangible, positive impact through my work, enabling the mission of the company "... to bring human connection and engagement to our digital world".</p>
         </div>
 
         <div class="map-section" id="transportation">
             <h2>Transportation:</h2>
-            <p>Around the same time, I began to become more fascinated with transportation systems, the built-environment, and the impact they have on our lives. As I followed this new-found passion, I joined the Transportation Engineering club at Northeastern to learn more about the subject through bi-weekly talks from people in the field. Sustainable transportation and urban development became one of my favorite areas, and I was extremely lucky to participate in a study-abroad program through Northeastern about this very subject. </p>
+            <p>Living off-campus in Boston, I became fascinated with transportation systems, the built-environment, and the impact they have on our lives. This new-found passion, led me to join the Transportation Engineering Club. This community exposed me to Sustainable Urban Transportation and Urban Development, and I was extremely lucky to participate in a Northeastern study-abroad program in the Netherlands, where we immersed ourselves in these subjects and observed these concepts in action. </p>
         </div>
 
         <div class="map-section" id="netherlands">
             <h2>Netherlands:</h2>
-            <p>Throughout the five weeks I spent in the Netherlands during this program, I learned about and expereinced (by bike, train, and bus, of course!) the infrastructure, design principles, and most importantly, the way of life that is fostered through a multi-modal, low-carbon, and sustainable policy implementations. </p>
+            <p>Throughout my time in the Netherlands, I learned about and experienced the infrastructure, key design principles, and most importantly, the quality of life that is fostered through multi-modal, low-carbon, and sustainable policy implementations.</p>
         </div>
 
         <div class="map-section" id="career-path">
             <h2>Career Path:</h2>
-            <p>Ever since this study abroad, I have been striving to leverage my Computer Science skills and experience through various projects dealing with transportaion systems and active-transport infrastructure. Post graduation, I am keen to pursue a role which utilizes technology, Computer and Data Science, and Software Development to aid in the improvement of our transportation systems and built-environment.</p>
+            <p>Since my time in the Netherlands, I am striving to leverage my Computer Science skills and experience on various projects dealing with transportation systems and active-transport infrastructure. Post graduation, I am keen to pursue a role which utilizes Technology, Computer and Data Science, and Software Development to aid in the improvement of our transportation systems and built-environment.</p>
         </div>
 
         <div class="map-section" id="BCU">
             <h2>Boston Cyclist Union:</h2>
-            <p>Most recently, I have been working on a project alongside the Boston Cyclist Union's (<a href="https://bostoncyclistsunion.org/" target="_blank">BCU</a>) volunteer data science team, <a href="https://bostoncyclistsunion.org/bcu-labs" target="_blank">BCU Labs</a>. The project uses reports of Illegal Parking from Boston 311 to identify instances where active-transportation infrastructure is impacted, aiming to visualize the areas of the transportation system that need the most improvement. More information about the project can be found <a href="projects.html">here</a></p>
+            <p>Beginning in January, 2024, I worked on a project alongside the Boston Cyclist Union's (<a href="https://bostoncyclistsunion.org/" target="_blank">BCU</a>) data science team, <a href="https://bostoncyclistsunion.org/bcu-labs" target="_blank">BCU Labs</a>. The project uses Illegal Parking reports from Boston's 311 system to identify instances where active-transportation infrastructure is impacted, in order to build data visualizations of the areas of the transportation system that need the most improvement. More information about the project can be found <a href="projects.html">here</a></p>
         </div>
 
         <div class="map-section" id="contact-info">
             <h2>Contact Info:</h2>
+            <p>Please feel free to browse this portfolio, and of course reach out if you know of any opportunities where I can apply my skills, further my passions and continue on a fulfilling career journey.</p>
             <ul>
+                <li><a href="resume.html">Resume</a></li>
                 <li>School Email: <a href="mailto: roldan.m@northeastern.edu">roldan.m@northeastern.edu</a></li>
                 <li>Personal Email: <a href="mailto: marcusaroldan@gmail.com">marcusaroldan@gmail.com</a></li>
                 <li>Cell Phone: (973) 229-3445</li>
